iter_language/tests/corpus/compose/valid/trigger-webhook-inherit.iter
queue main file { path = "./.iter/queue" }

trigger hook webhook {
    host = "127.0.0.1"
    port = 9000
    path = "/hooks"
    secret = file("./secret.txt")
    priority = high
    metadata {
        kind = "github"
    }
    target = main

    on "push" {
        metadata {
            repo = "demo"
        }
    }
}
