iter_language/tests/corpus/compose/invalid/webhook-host-and-bind.iter
queue main file { path = "./.iter/queue" }

trigger hook webhook {
    host = "127.0.0.1"
    port = 9000
    bind = "127.0.0.1:9001"
    path = "/hooks"
    target = main
}
